add text best_players_total_score.html add mising text

--- a/htdocs/dashboard/best_players_total_score.html
+++ b/htdocs/dashboard/best_players_total_score.html
@@ -21,7 +21,7 @@
           <h2>Best Players</h2>
           <table class="bordered">
             <tbody>
-              <tr><th></th><th>Total Score</th><th>Player</th><th>Games Played</th><th>Games Won</th><th>Win %</th><th>Best Score</th><th>Average Score</th></tr>
+              <tr><th>Ranking</th><th>Total Score</th><th>Player</th><th>Games Played</th><th>Games Won</th><th>Win %</th><th>Best Score</th><th>Average Score</th></tr>
 
             </tbody>
           </table>
